# version

./: .gitignore  CLAUDE.md  index.html  sw.js
core/: formula-engine.js  geometry-builder.js  schema-store.js  xenos-bridge.js
geometry/: iso-screw-preview.js  iso-screw.js  laptop-stand-preview.js  laptop-stand-shader.js  laptop-stand.js
schemas/: adjustment-screw.json  angle-iron.json  ball-knob.json  base-plate.json  bronze-sleeve-bushing.json  brutalist-bench.json  brutalist-chair.json  brutalist-table.json  cable-clamp-plate.json  corner-bracket.json  enclosure.json  flanged-bronze-bushing.json  flanged-nylon-bushing.json  flat-bar-aluminum.json  flat-bar-steel.json  flat-gasket.json  gusset-plate.json  hex-bar-steel.json  hex-nut.json  hex-standoff-ff.json  hex-standoff-mf.json  hex-standoff-mm.json  inch-dowel-pin.json  inch-flat-washer-sae.json  inch-flat-washer-uss.json  inch-hex-bolt.json  inch-hex-nut.json  inch-jam-nut.json  inch-lock-washer.json  inch-nylon-lock-nut.json  inch-roll-pin.json  inch-socket-head-screw.json  inch-taper-pin.json  iso-screw.json  l-bracket-steel.json  laptop-stand.json  lever-handle.json  metal-plate.json  metric-button-head-screw.json  metric-cap-nut.json  (+63 more)
tools/: generate-catalog.py
ui/: configurator.js  graph-view.js  three-viewer.js
xenos-wasm/: Cargo.toml
xenos-wasm/src/: lib.rs
